// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocLinkButton renders 1`] = `
<React.Fragment>
  <Dropdown
    align="start"
    autoClose={true}
    navbar={false}
  >
    <DropdownToggle
      className="Button"
      id="LocLinkButton-dropdown-toggle"
    >
      Link this LOC to another LOC
    </DropdownToggle>
    <DropdownMenu
      flip={true}
    >
      <DropdownItem
        onClick={[Function]}
      >
        Link to an existing LOC
      </DropdownItem>
      <DropdownItem
        onClick={[Function]}
      >
        Link to a new Identity LOC
      </DropdownItem>
      <DropdownItem
        onClick={[Function]}
      >
        Link to a new Transaction LOC
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <LocLinkExistingDialog
    exit={[Function]}
    show={false}
  />
  <LocCreationDialog
    exit={[Function]}
    hasLinkNature={true}
    locRequest={
      Object {
        "locType": "Transaction",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterIdentityLoc": undefined,
        "userIdentity": Object {
          "company": false,
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    onSuccess={[Function]}
    show={false}
  />
</React.Fragment>
`;

exports[`LocLinkButton renders and excludes new identity 1`] = `
<React.Fragment>
  <Dropdown
    align="start"
    autoClose={true}
    navbar={false}
  >
    <DropdownToggle
      className="Button"
      id="LocLinkButton-dropdown-toggle"
    >
      Link this LOC to another LOC
    </DropdownToggle>
    <DropdownMenu
      flip={true}
    >
      <DropdownItem
        onClick={[Function]}
      >
        Link to an existing LOC
      </DropdownItem>
      <DropdownItem
        onClick={[Function]}
      >
        Link to a new Transaction LOC
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <LocLinkExistingDialog
    exit={[Function]}
    show={false}
  />
  <LocCreationDialog
    exit={[Function]}
    hasLinkNature={true}
    locRequest={
      Object {
        "locType": "Transaction",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterIdentityLoc": undefined,
        "userIdentity": Object {
          "company": false,
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    onSuccess={[Function]}
    show={false}
  />
</React.Fragment>
`;
